--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -871,13 +871,72 @@
 
 
                 </TableLayout>
-                <!--
+
                 <LinearLayout
-                    android:layout_width=""
-                    android:layout_height="">
+                    android:id="@+id/lyMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/message_bg"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/tvIntroLevel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30dp"
+                        android:fontFamily="@font/rowdies_regular"
+                        android:shadowColor="@color/white"
+                        android:shadowRadius="8"
+                        android:text="Level: 1"
+                        android:textColor="@color/app_color_dark"
+                        android:textSize="70sp" />
+
+                    <TextView
+                        android:id="@+id/tvIntroLives"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="40dp"
+                        android:fontFamily="@font/rowdies_regular"
+                        android:shadowColor="@color/white"
+                        android:shadowRadius="8"
+                        android:text="Lives: 1"
+                        android:textColor="@color/app_color_dark"
+                        android:textSize="45sp" />
+
+                    <TextView
+                        android:id="@+id/tvAction"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginRight="24dp"
+                        android:background="@drawable/bg_title_top"
+                        android:fontFamily="@font/rowdies_regular"
+                        android:onClick="launchAction"
+                        android:paddingTop="10dp"
+                        android:text="Next level"
+                        android:textAlignment="center"
+                        android:textColor="@color/app_color_light"
+                        android:textSize="24sp" />
+
+                    <ImageButton
+                        android:id="@+id/ibtShare"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginBottom="40dp"
+                        android:background="@drawable/bg_title_bottom"
+                        android:onClick="launchShareGame"
+                        android:src="@drawable/ic_share" />
 
                 </LinearLayout>
-                -->
+
             </RelativeLayout>
             <TextView
                 android:id="@+id/tvInstructions"
