Game over control

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -882,7 +882,7 @@
                     android:visibility="visible">
 
                     <TextView
-                        android:id="@+id/tvIntroLevel"
+                        android:id="@+id/tvTitleMessage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -895,7 +895,7 @@
                         android:textSize="70sp" />
 
                     <TextView
-                        android:id="@+id/tvIntroLives"
+                        android:id="@+id/tvScoreMessage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
